--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
 <h1>Calor</h1>
 
-<p></p>
+<p>Calor é por definição transferência de energia térmica entre corpos que possuem temperaturas distintas</p>
 
-<p></p>
+<p>O calor não está diretamente relacionado com a temperatura, tampouco deve ser visto como uma nova grandeza, mas a diferença de temperatura entre diferentes corpos gera o fluxo de energia térmica</p>
 
-<p></p>
 
 </body>
 
